2014-02-04  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/59788
	* config/sol2.h (LINK_LIBGCC_MAPFILE_SPEC): Define.
	(LINK_SPEC): Use it for -shared, -shared-libgcc.

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59882
	* tree.c (get_binfo_at_offset): Do not get confused by empty classes;

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	* gimple-fold.c (gimple_extract_devirt_binfo_from_cst): Remove.
	* gimple-fold.h (gimple_extract_devirt_binfo_from_cst): Remove.

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59831
	* ipa-cp.c (ipa_get_indirect_edge_target_1): Use ipa-devirt
	to figure out targets of polymorphic calls with known decl.
	* ipa-prop.c (try_make_edge_direct_virtual_call): Likewise.
	* ipa-utils.h (get_polymorphic_call_info_from_invariant): Declare.
	* ipa-devirt.c (get_polymorphic_call_info_for_decl): Break out from ...
	(get_polymorphic_call_info): ... here.
	(get_polymorphic_call_info_from_invariant): New function.

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (ipa_get_indirect_edge_target_1): Do direct
	lookup via vtable pointer; check for type consistency
	and turn inconsitent facts into UNREACHABLE.
	* ipa-prop.c (try_make_edge_direct_virtual_call): Likewise.
	* gimple-fold.c (gimple_get_virt_method_for_vtable): 
	Do not ICE on type inconsistent querries; return UNREACHABLE
	instead.

2014-02-03  Richard Henderson  <rth@twiddle.net>

	PR tree-opt/59924
	* tree-ssa-uninit.c (push_to_worklist): Don't re-push if we've
	already processed this node.
	(normalize_one_pred_1): Pass along mark_set.
	(normalize_one_pred): Create and destroy a pointer_set_t.
	(normalize_one_pred_chain): Likewise.

2014-02-03  Laurent Aflonsi  <laurent.alfonsi@st.com>

	PR gcov-profile/58602
	* gcc/gcov-io.c (gcov_open): Open with truncation when mode<0

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59831
	* ipa-cp.c (ipa_get_indirect_edge_target_1): Give up on -fno-devirtualize;